control/legacy_workspaces/archive_legacy_ShadowTag-v2/apps/devrel-demos/containers/in-place-pod-resize/k8s/echo-deployment.yaml
# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: ippr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
        - image: ealen/echo-server:latest
          imagePullPolicy: IfNotPresent
          name: echoserver
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: '3'
              memory: '10Gi'
              ephemeral-storage: '1Gi'
            limits:
              cpu: '3'
              memory: '10Gi'
              ephemeral-storage: '1Gi'
