control/legacy_workspaces/archive_legacy_ShadowTag-v2/apps/devrel-demos/containers/in-place-pod-resize/k8s/pod.yaml
# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Pod
metadata:
  name: ippr
  namespace: ippr
  labels:
    app: ippr
spec:
  serviceAccountName: ippr
  restartPolicy: Always
  containers:
    - name: ippr
      image: us-docker.pkg.dev/mofilabs/kubecon/ippr:v0.0.8
      ports:
        - containerPort: 8080
      resizePolicy:
        - resourceName: cpu
          restartPolicy: NotRequired
        - resourceName: memory
          restartPolicy: RestartContainer
      resources:
        requests:
          memory: '512Mi'
          cpu: '500m'
        limits:
          cpu: '500m'
          memory: '512Mi'
      livenessProbe:
        httpGet:
          path: /healthz
          port: 8080
        initialDelaySeconds: 3
        periodSeconds: 5
      readinessProbe:
        httpGet:
          path: /healthz
          port: 8080
        initialDelaySeconds: 2
